feat: Add routes and ejs templates for cart, checkout and rename controllers

--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -1,8 +1,8 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 </head>
 
 <body>
-  <%- include('includes/navigation.ejs') %>
+  <%- include('../includes/navigation.ejs') %>
   <main>
     <h1>My Products</h1>
     <% if (products.length > 0) { %>
@@ -27,4 +27,4 @@
     <% } %>
   </main>
 
-<%- include('includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
