--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,7 +1,36 @@
-<link rel="stylesheet" href="/css/product.css">
+<%- include('../includes/head.ejs') %>
 </head>
 
 <body>
   <%- include('../includes/navigation.ejs') %>
+  <main>
+    <h1>My Products</h1>
+    <% if (products.length > 0) { %>
+      <div class="grid">
+        <% for (let product of products) { %>
+          <article class="card product-item">
+            <header class="card__header">
+              <h1 class="product__title"><%= product.title %></h1>
+            </header>
+          </article>
+          <div class="card__image">
+            <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+          </div>
+          <div class="card__content">
+            <h2 class="product__price"><%= product.price %></h2>
+            <p class="product__description"><%= product.description %></p>
+          </div>
+          <div class="card__actions">
+            <a href="/admin/edit-product/<%= product.title %>" class="btn">Edit</a>
+            <form action="/admin/delete-product" method="POST">
+              <button class="btn">Delete</button>
+            </form>
+          </div>
+        <% } %>
+      </div>
+    <% } else { %>
+      <h1>No Products Found</h1>
+    <% } %>
+  </main>
 
 <%- include('../includes/end.ejs') %>
