--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="/css/product.css">
+<%- include('../includes/head.ejs') %>
+  <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
