--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,17 +1,19 @@
 <%- include('../includes/head.ejs') %>
   <link rel="stylesheet" href="/css/product.css">
+  <link rel="stylesheet" href="/css/cart.css">
 </head>
 
 <body>
   <%- include('../includes/navigation.ejs') %>
   <main>
     <% if (products.length > 0) { %>
-      <ul>
+      <ul class="cart__item-list">
         <% products.forEach(product => { %>
-          <li>
-            <p><%= product.productData.title %> (<%= product.qty %>)</p>
+          <li class="cart__item">
+            <p><%= product.title %></p>
+            <p>Quantity: <%= product.cartItem.quantity %></p>
             <form action="/cart-delete-item" method="POST">
-              <input type="hidden" name="productId" value="<%= product.productData.id %>">
+              <input type="hidden" name="productId" value="<%= product.id %>">
               <button class="btn" type="submit">Delete</button>
             </form>
           </li>
