--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -26,8 +26,8 @@
                       </p>
                   </div>
                   <div class="card__actions">
-                    <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
-                    <form action="/admin/product/<%= product.id %>" method="POST">
+                    <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
+                    <form action="/admin/product/<%= product._id %>" method="POST">
                       <button class="btn">Delete</button>
                     </form>
                   </div>
