--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -13,7 +13,7 @@
             <p><%= product.title %></p>
             <p>Quantity: <%= product.cartItem.quantity %></p>
             <form action="/cart-delete-item" method="POST">
-              <input type="hidden" name="productId" value="<%= product.id %>">
+              <input type="hidden" name="productId" value="<%= product._id %>">
               <button class="btn danger" type="submit">Delete</button>
             </form>
           </li>
