--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -11,7 +11,7 @@
         <% products.forEach(product => { %>
           <li class="cart__item">
             <p><%= product.title %></p>
-            <p>Quantity: <%= product.cartItem.quantity %></p>
+            <p>Quantity: <%= product.quantity %></p>
             <form action="/cart-delete-item" method="POST">
               <input type="hidden" name="productId" value="<%= product._id %>">
               <button class="btn danger" type="submit">Delete</button>
