--- a/public/css/order.css
+++ b/public/css/order.css
@@ -1,28 +1,29 @@
 .orders {
   list-style: none;
   padding: 0;
-  box-shadow: 0 2px 8px gray;
+  margin: 0;
 }
 
 .orders__item {
-  padding: 1px;
-  padding-left: 1rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  padding: 1rem;
   margin-bottom: 1rem;
 }
 
 .orders__item h1 {
+  margin: 0;
   font-size: 1rem;
 }
 
 .orders__products {
   list-style: none;
   padding: 0;
-  padding: 0 1rem 1rem 0;
+  padding: 0;
 }
 
 .orders__products-item {
-  padding: 5px;
-  margin-bottom: 5px;
+  margin: 0.5rem 0;
+  padding: 0.5rem 0;
   border: 1px solid #00695c;
   color: #00695c;
 }
