--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -5,8 +5,9 @@
 
 <body>
   <%- include('../includes/navigation.ejs') %>
+
   <main>
-    <form class="login-form" action="/login" method="post">
+    <form class="login-form" action="/signup" method="post">
       <div class="form-control">
         <label for="email">Email</label>
         <input type="email" name="email" id="email">
@@ -15,7 +16,11 @@
         <label for="password">Password</label>
         <input type="password" name="password" id="password">
       </div>
-      <button class="btn" type="submit">Login</button>
+      <div class="form-control">
+        <label for="confirmPassword">Confirm Password</label>
+        <input type="password" name="confirmPassword" id="confirmPassword">
+      </div>
+      <button class="btn" type="submit">Signup</button>
     </form>
   </main>
 <%- include('../includes/end.ejs') %>
