--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,15 +11,25 @@
         <%= errorMessage %>
       </div>
     <% } %>
-    <form class="login-form" action="/login" method="post">
+    <form class="login-form" action="/login" method="post" novalidate>
       <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       <div class="form-control">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email">
+        <input
+          class="<%= validationErrors.find(error => error.path === 'email') ? 'invalid' : '' %>"
+          type="email"
+          name="email"
+          id="email"
+          value="<%= oldInput?.email %>">
       </div>
       <div class="form-control">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password">
+        <input
+          class="<%= validationErrors.find(error => error.path === 'password') ? 'invalid' : '' %>"
+          type="password"
+          name="password"
+          id="password"
+          value="<%= oldInput?.password %>">
       </div>
       <button class="btn" type="submit">Login</button>
     </form>
