feat: Add multer to handle multipart forms and images, update controller to save image product paths

--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -11,7 +11,7 @@
         <%= errorMessage %>
       </div>
     <% } %>
-    <form class="product-form" action="<%= editing ? '/admin/edit-product' : '/admin/add-product/' %>" method="post">
+    <form class="product-form" action="<%= editing ? '/admin/edit-product' : '/admin/add-product/' %>" method="post" enctype="multipart/form-data">
       <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       <div class="form-control">
         <label for="title">Title</label>
@@ -22,7 +22,7 @@
           id="title"
           value="<%= product?.title %>">
       </div>
-      <div class="form-control">
+      <!-- <div class="form-control">
         <label for="imageUrl">Image URL</label>
         <input
           class="<%= validationErrors.find(error => error.path === 'imageUrl') ? 'invalid' : '' %>"
@@ -30,6 +30,10 @@
           name="imageUrl"
           id="imageUrl"
           value="<%= product?.imageUrl %>">
+      </div> -->
+      <div class="form-control">
+        <label for="image">Image</label>
+        <input type="file" name="image" id="image">
       </div>
       <div class="form-control">
         <label for="price">Price</label>
