--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -4,37 +4,38 @@
 
 <body>
   <%- include('../includes/navigation.ejs') %>
-  <main>
-    <% if (products.length > 0) { %>
-      <div class="grid">
+    <main>
+      <% if (products.length> 0) { %>
+        <div class="grid">
           <% for (let product of products) { %>
-              <article class="card product-item">
-                  <header class="card__header">
-                      <h1 class="product__title">
-                          <%= product.title %>
-                      </h1>
-                  </header>
-                  <div class="card__image">
-                      <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
-                  </div>
-                  <div class="card__content">
-                      <h2 class="product__price">$
-                          <%= product.price %>
-                      </h2>
-                      <p class="product__description">
-                          <%= product.description %>
-                      </p>
-                  </div>
-                  <div class="card__actions">
-                    <% if (isAuthenticated) { %>
-                      <%- include('../includes/add-to-cart.ejs', { product: product }) %>
+            <article class="card product-item">
+              <header class="card__header">
+                <h1 class="product__title">
+                  <%= product.title %>
+                </h1>
+              </header>
+              <div class="card__image">
+                <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
+              </div>
+              <div class="card__content">
+                <h2 class="product__price">$
+                  <%= product.price %>
+                </h2>
+                <p class="product__description">
+                  <%= product.description %>
+                </p>
+              </div>
+              <div class="card__actions">
+                <% if (isAuthenticated) { %>
+                  <%- include('../includes/add-to-cart.ejs', { product: product }) %>
                     <% } %>
-                  </div>
-              </article>
-              <% } %>
-      </div>
-    <% } else { %>
-      <h1>No Products Found!</h1>
-    <% } %>
-  </main>
+              </div>
+            </article>
+          <% } %>
+        </div>
+        <%- include('../includes/pagination.ejs', { currentPage, nextPage, previousPage, lastPage, hasPreviousPage, hasNextPage }) %>
+      <% } else { %>
+        <h1>No Products Found!</h1>
+      <% } %>
+    </main>
 <%- include('../includes/end.ejs') %>
