--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -27,10 +27,9 @@
                   </div>
                   <div class="card__actions">
                     <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
-                    <form action="/admin/product/<%= product._id %>" method="POST">
-                      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                      <button class="btn">Delete</button>
-                    </form>
+                    <input type="hidden" name="productId" value="<%= product._id %>">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <button class="btn" type="button" onclick="deleteProduct(this)">Delete</button>
                   </div>
               </article>
               <% } %>
@@ -40,3 +39,4 @@
     <% } %>
   </main>
 <%- include('../includes/end.ejs') %>
+<script src="/js/admin.js"></script>
